--- a/motivation.html
+++ b/motivation.html
@@ -6,21 +6,21 @@
 <title>CalorieCoach - Recipes & Motivation</title>
 <style>
     :root{
-        --green:#4CAF50;
+        --green:#504586;
         --soft:#fdfbfb;
         --card-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
     body{
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         margin:0;
-        background: linear-gradient(135deg,var(--soft),#ebedee);
+        background: url('https://i.pinimg.com/1200x/73/06/86/730686e91ec09b02bb4ebb58b25f85e5.jpg') no-repeat center center/cover;
         color:#222;
         scroll-behavior: smooth;
     }
     .header{
         text-align:center;
         padding:36px 18px 16px;
-        background: linear-gradient(90deg,#4CAF50,#81C784);
+        background: linear-gradient(90deg,#1e2381,#9e70ad);
         color:white;
         border-bottom-left-radius:18px;
         border-bottom-right-radius:18px;
