Revert "backend basic integration"

--- a/bmi.html
+++ b/bmi.html
@@ -7,7 +7,7 @@
 <style>
     body {
         font-family: "Poppins", sans-serif;
-        background: url("{{ url_for('static', filename='bmi.jpg') }}") no-repeat center center/cover;
+        background: url('bmi.jpg') no-repeat center center/cover;
         display: flex;
         justify-content: center;
         align-items: center;
