--- a/home.html
+++ b/home.html
@@ -197,14 +197,13 @@
     <div class="sidebar">
         <div class="sidebar-top">
             <h2>Calorie Coach</h2>
-            <a href="{{ url_for('profile') }}">Profile</a>
-            <a href="{{ url_for('bmi') }}">Calculate BMI</a>
-            <a href="{{ url_for('water') }}">Water Log</a>
-            <a href="{{ url_for('report') }}">Report</a>
-        
-
+            <a href="profile.html">Profile</a>
+            <a href="bmi.html">Calculate BMI</a>
+            <a href="motivation.html">Recipe Suggestions</a>
+            <a href="water.html">Water Log</a>
+            <a href="report.html">Report</a>
         </div>
-        <a href="{{ url_for('login') }}"  class="logout-btn">Logout</a>
+        <a href="login.html" class="logout-btn">Logout</a>
     </div>
 
     <!-- Main Content -->
