--- a/newuser.html
+++ b/newuser.html
@@ -66,9 +66,9 @@
 <body>
     <div class="container">
         <h2>Set Up Your Profile</h2>
-        <form action="/newuser_profile" method="POST" enctype="multipart/form-data">
+        <form action="/save_user" method="POST" enctype="multipart/form-data">
             <label>Full Name</label>
-            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="text" name="full_name" placeholder="Your Name" required>
 
             <label>Age</label>
             <input type="number" name="age" min="1" max="120" required>
@@ -100,7 +100,7 @@
             </select>
 
             <label>Goal</label>
-            <select name="health_goal" required>
+            <select name="goal" required>
                 <option value="" disabled selected>Select</option>
                 <option>Lose Weight</option>
                 <option>Maintain Weight</option>
