--- a/water.html
+++ b/water.html
@@ -9,7 +9,7 @@
         font-family: 'Segoe UI', sans-serif;
         margin: 0;
         padding: 0;
-        background: url("{{ url_for('static', filename='bmi.jpg') }}") no-repeat center center/cover;
+        background: url('waterbg.jpg') no-repeat center center/cover;
         color: #333;
         text-align: center;
     }
